<resources>
    <string name="app_name">Parental Control</string>
    <string name="cadastrarDependente">INSERT\nKID</string>
    <string name="nomeDependente">Kid Name</string>
    <string name="editNomeDependente" >kid name</string>
    <string name="escolaDependente">Kid School</string>
    <string name="editTextEscola" >school data</string>
    <string name="idadeDependente">Age</string>
    <string name="editTextIdade" >age data</string>
    <string name="textViewSerie">Kid grade</string>
    <string name="ensinoInfantil">Preschool education</string>
    <string name="ensinoFundamental1">Elementary school</string>
    <string name="ensinoFundamental2">Elementary School II</string>
    <string name="ensinoMedio">High school</string>
    <string name="buttonLimpar">Clean data</string>
    <string name="buttonSalvar">Save data</string>
    <string name="evento">School events</string>
    <string name="escolaEvento">School</string>
    <string name="textViewEscolaEvento">School</string>
    <string name="CadastrarEvento">INSERT\nEVENT</string>
    <string name="dataEvento">Date</string>
    <string name="levar">Take a snack</string>
    <string name="comida">food</string>
    <string name="bebida">drinks</string>
    <string name="limparEvento">clean data</string>
    <string name="salvarEvento">save data</string>
    <string name="tipoEvento">Event type</string>
    <string name="dependentesCadastrados">KIDS</string>
    <string-array name="tipo_evento">
        <item><string name="family">Family Day</string></item>
        <item><string name="maes">Mothers Day</string></item>
        <item><string name="pais">Fathers Day</string></item>
        <item><string name="others">Others</string></item>
    </string-array>

    <string name="maes">Mothers Day</string>
    <string name="pais">Fathers Day</string>
    <string name="family">Family Day</string>
    <string name="others">Others</string>

    <string name="samuel">Samuel</string>
    <string name="joaoGabriel">João Gabriel</string>
    <string name="valentina">Valentina</string>
    <string name="pedro">Pedro Arthur</string>
    <string name="otavio">Otavio</string>
    <string name="fernando">Fernando</string>
    <string name="miguel">Miguel</string>
    <string name="lorenzo">Lorenzo</string>
    <string name="theo">Theo</string>
    <string name="madalena">Madalena</string>
    <string name="dependenteCadastrado">KIDS</string>
    <string name="escolaDependenteCadastrado" >School data</string>
    <string name="escola">School</string>
    <string name="idade">age</string>
    <string name="serie">Kid grade</string>
    <string name="anos">years old</string>
    <string name="botaoCancelar">CANCEL</string>
    <string name="alterar_dependente">CHANGE KID DATA</string>
    <string name="textViewEventos">EVENTS</string>
    <string name="alterar_evento">Change event data</string>
    <string name="sobre">ABOUT ME</string>
    <string name="nomeAluno">Dev: Daniela Pereira de Andrade</string>
    <string name="curso">Course: Java</string>
    <string name="email">E-mail: danielandraderock@gmail.com</string>
    <string name="novo_dependente">New kid</string>
    <string name="selecione_dependente">Select kid</string>
    <string name="selecione_disciplina">Select discipline</string>
    <string name="selecionar_data_atividade">Select activty data</string>
    <string name="nomeEvento">EVENT</string>
    <string name="menuItemNovoEvento">Insert event</string>
    <string name="menuItemCancelarEvento">Cancel</string>
    <string name="dependente">Kid</string>
    <string name="ok">ok</string>
    <string name="aviso">Warning</string>
    <string name="confirmacao">Seal</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="deseja_realmente_apagar">Delete data?</string>
    <string name="nome_vazio">Fill the name field!</string>
    <string name="idade_invalida">Age between 0 and 18 years old!</string>
    <string name="nenhuma_serie">No grade selected!</string>
    <string name="escola_vazia">Fill the school field!</string>
    <string name="descricao">" The idea of ​​the application is that parents or guardians can register activities and events at their children's schools. With this they will have control over the school routine of the little ones."</string>
    <string name="idade_vazia">Fill the age field!</string>
    <string name="levar_lanche">Choose one option!</string>
    <string name="campoEvento">Fill the event field!</string>
    <string name="data_vazia">Fill the date field!</string>


</resources>