<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_dependentes_cadastrados"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewEventoCadastrado"
        android:layout_width="319dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/nomeEvento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewLevarBebida"
        android:layout_width="318dp"
        android:layout_height="36dp"
        android:text="@string/bebida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewLevarComida"
        app:layout_constraintStart_toStartOf="@+id/textViewLevarComida"
        app:layout_constraintTop_toBottomOf="@+id/textViewLevarComida"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/escolaEventoCadastrado"
        android:layout_width="318dp"
        android:layout_height="57dp"
        android:inputType="number"
        android:text="@string/textViewEscolaEvento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewEventoCadastrado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEventoCadastrado"
        app:layout_constraintTop_toBottomOf="@+id/textViewEventoCadastrado"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewLevarComida"
        android:layout_width="319dp"
        android:layout_height="35dp"
        android:text="@string/comida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewDataEventoCadastrado"
        app:layout_constraintStart_toStartOf="@+id/textViewDataEventoCadastrado"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataEventoCadastrado"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewTipoEventoCadastrado"
        android:layout_width="318dp"
        android:layout_height="37dp"
        android:text="@string/tipoEvento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewLevarBebida"
        app:layout_constraintStart_toStartOf="@+id/textViewLevarBebida"
        app:layout_constraintTop_toBottomOf="@+id/textViewLevarBebida"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDataEventoCadastrado"
        android:layout_width="318dp"
        android:layout_height="35dp"
        android:text="@string/dataEvento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/escolaEventoCadastrado"
        app:layout_constraintStart_toStartOf="@+id/escolaEventoCadastrado"
        app:layout_constraintTop_toBottomOf="@+id/escolaEventoCadastrado"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>