<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroDependenteActivity">

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:text="@string/nomeDependente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        tools:text="@string/nomeDependente" />

    <EditText
        android:id="@+id/editTextNomeDependente"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/editNomeDependente" />

    <TextView
        android:id="@+id/textViewEscola"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/escolaDependente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeDependente"
        app:layout_constraintVertical_bias="0.01999998"
        tools:text="@string/escolaDependente" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="299dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewEscola"
        app:layout_constraintVertical_bias="0.050000012"
        tools:text="@string/editTextEscola" />

    <TextView
        android:id="@+id/textViewIdade"
        android:layout_width="44dp"
        android:layout_height="21dp"
        android:text="@string/idadeDependente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/textViewEscola"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.13999999"
        tools:text="@string/idadeDependente" />

    <EditText
        android:id="@+id/editTextNumberIdade"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/textViewIdade"
        app:layout_constraintVertical_bias="0.060000002"
        tools:text="@string/editTextIdade" />
</androidx.constraintlayout.widget.ConstraintLayout>