<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroEventoActivity">

    <TextView
        android:id="@+id/textViewEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evento"
        app:layout_constraintBottom_toTopOf="@+id/editTextEvento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextEvento"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextEvento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/textViewEvento"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/textViewEscolaEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewEscolaEvento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/textViewEvento"
        app:layout_constraintTop_toBottomOf="@+id/editTextEvento"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/editTextEscolaEvento"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextEvento"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEscolaEvento"
        app:layout_constraintTop_toBottomOf="@+id/textViewEscolaEvento"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataEvento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEscolaEvento"
        app:layout_constraintTop_toBottomOf="@+id/editTextEscolaEvento"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/editTextDataEvento"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewData"
        app:layout_constraintTop_toBottomOf="@+id/textViewData"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewLevar"
        android:layout_width="67dp"
        android:layout_height="15dp"
        android:text="@string/levar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextDataEvento"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextDataEvento"
        app:layout_constraintTop_toBottomOf="@+id/editTextDataEvento"
        app:layout_constraintVertical_bias="0.036" />

    <CheckBox
        android:id="@+id/checkBoxComida"
        android:layout_width="87dp"
        android:layout_height="36dp"
        android:text="@string/comida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewLevar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewLevar"
        app:layout_constraintTop_toBottomOf="@+id/textViewLevar"
        app:layout_constraintVertical_bias="0.04000002" />

    <CheckBox
        android:id="@+id/checkBoxBebida"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:text="@string/bebida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxComida"
        app:layout_constraintStart_toStartOf="@+id/checkBoxComida"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxComida"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSalvarEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="salvar"
        android:text="@string/salvarEvento"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLimparEvento"
        app:layout_constraintEnd_toEndOf="@+id/editTextDataEvento"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonLimparEvento"
        app:layout_constraintTop_toTopOf="@+id/buttonLimparEvento" />

    <Button
        android:id="@+id/buttonLimparEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:onClick="limpar"
        android:text="@string/limparEvento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSalvarEvento"
        app:layout_constraintStart_toStartOf="@+id/checkBoxBebida"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxBebida"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/textViewTipoEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipoEvento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewLevar"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxBebida"
        app:layout_constraintVertical_bias="0.060000002" />

    <Spinner
        android:id="@+id/spinnerEvento"
        android:layout_width="309dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextDataEvento"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextDataEvento"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoEvento"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>