<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroAtividadeActivity">

    <Spinner
        android:id="@+id/spinnerDisciplinaAtividade"
        android:layout_width="373dp"
        android:layout_height="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="142dp" />

    <TextView
        android:id="@+id/textViewNomeDependenteAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecione_dependente"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecione_disciplina"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="123dp" />

    <Spinner
        android:id="@+id/spinnerDependenteAtividade"
        android:layout_width="373dp"
        android:layout_height="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/textViewDataAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecionar_data_atividade"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="211dp" />

    <EditText
        android:id="@+id/editTextDataAtividade"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="230dp" />
</androidx.constraintlayout.widget.ConstraintLayout>